# taizen-rag

./: Makefile  TODO.md  pyproject.toml
ragatouille/: RAGPretrainedModel.py
ragatouille/data/: preprocessors.py
ragatouille/integrations/: _langchain.py
ragatouille/models/: base.py  colbert.py  index.py
ragatouille/server/: server.py
tests/: test_pretrained_loading.py  test_pretrained_optional_args.py  test_trainer_loading.py  test_training.py
tests/e2e/: test_e2e_api_endpoints.py  test_e2e_indexing_searching.py
