[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "ragatouille",
    "ragatouille.models",
    "ragatouille.data",
    "ragatouille.integrations",
    "ragatouille.negative_miners",
]

[project]
name = "RAGatouille"
version = "0.0.9post2"
description = "Library to facilitate the use of state-of-the-art retrieval models in common RAG contexts."
keywords = ["reranking", "retrieval", "rag", "nlp"]
authors = [{ name = "Ben Clavié", email = "bc@answer.ai" }]
maintainers = [{ name = "Ben Clavié", email = "bc@answer.ai" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~=3.12.0"

dependencies = [
    "llama-index",
    "faiss-cpu",
    "colbert-ai @ git+https://github.com/stanford-futuredata/ColBERT.git",
    "onnx",
    "srsly",
    "voyager",
    "torch>=1.13",
    "fast-pytorch-kmeans",
    "sentence-transformers",
    "setuptools",
    "einops",
    "psutil",
    "pytest>=8.4.0",
]

[project.optional-dependencies]
all = [
    "llama-index",
    "rerankers",
    "voyager",
    "fastapi >= 0.114.1",
    "uvicorn >= 0.30.6",
    "batched >= 0.1.2",
    "pytest",
]
api = ["fastapi >= 0.114.1", "uvicorn >= 0.30.6", "batched >= 0.1.2", "pytest"]
train = ["sentence-transformers", "pylate", "rerankers"]

[project.urls]
"Homepage" = "https://github.com/answerdotai/ragatouille"

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]

target-version = "py312"
